Final server untuk GPS ke Firebase

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gpsfix-server",
   "version": "1.0.0",
+  "description": "Server GPS ke Firebase",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
